--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="container" style="margin-top: 7vw;">
     <div class="row justify-content-center">
         <div class="col-sm-8 align-self-center text-center">
-            <h1>Bienvenido {{usuario.nombre}}</h1>
+            <h1>Bienvenid@ {{usuario.nombre}}</h1>
             <ul class="list-group list-group-flush" style="margin-top: 1vw;">
                 <li class="list-group-item">
                     <h4 class="text-secondary">El sitio perfecto para resolver tus dudas.</h4>
